fixed prev and next button alignment

--- a/style.css
+++ b/style.css
@@ -71,6 +71,7 @@ h1{
 /* Hide the images by default */
 .slides {
   display: none;
+  z-index: 0;
 
 }
 
@@ -80,10 +81,11 @@ h1{
 }
 
 /* Next & previous buttons */
-.prev, .next {
+.prev {
   cursor: pointer;
   position: absolute;
   top: 50%;
+  left: 0;
   width: auto;
   margin-top: -22px;
   padding: 16px;
@@ -94,6 +96,21 @@ h1{
   border-radius: 0 3px 3px 0;
   user-select: none;
 }
+.next {
+    cursor: pointer;
+    position: absolute;
+    top: 50%;
+    right: 0;
+    width: auto;
+    margin-top: -22px;
+    padding: 16px;
+    color: white;
+    font-weight: bold;
+    font-size: 18px;
+    transition: 0.6s ease;
+    border-radius: 0 3px 3px 0;
+    user-select: none;
+  }
 
 /* Position the "next button" to the right 
 .next {
